# Khaos_OLD

./: .clang-format  .cmake-format.yml  .cmake-linter.yml  .codespellrc  .cppcheck  .cz.yaml  .editorconfig  .gitattributes  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: DockCross.yml  dockcross-cmake-builder.sh  include-what-you-use.yml  pre-commit.yml
include/khaos/: UtilityMacros.h  khaos.hpp
src/khaos/: CMakeLists.txt  KhaosVersion.h.in
tests/: CMakeLists.txt  KhaosVersion.test.cpp  UtilityMacros.test.cpp
